--- a/equipos/.htaccess
+++ b/equipos/.htaccess
@@ -1,3 +1,4 @@
 RewriteEngine On 
+RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f 
 RewriteRule ^(.*)$ %{ENV:BASE}equipos.php [QSA,L]
